# ShareToCloud

./: CMakeLists.txt  README.md
src/: FolderTracker.h  folder_tracker.cpp  folder_tracker.h  main.cpp
src/GoogleManager/: client_secret.h  constants.h  google_authenticator.cpp  google_authenticator.h  google_drive.cpp  google_drive.h  main.cpp  mime_type.h  request_handler.cpp  request_handler.h  system_utilities.h
